# Hermes

./: .gitignore  .mcp.json  index.html  p5.txt  package.json  spec.md  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: collections.rs  environments.rs  folders.rs  history.rs  mod.rs  requests.rs  settings.rs  sync.rs
src-tauri/src/http/: client.rs
src/components/auth/: AuthDialog.tsx  UserMenu.tsx
src/components/collections/: CollectionTree.tsx  CreateCollectionDialog.tsx  DraggableTree.tsx  MoveRequestDialog.tsx  RenameInput.tsx  SaveRequestDialog.tsx  TreeContextMenu.tsx
src/components/environments/: EnvEditor.tsx  EnvSwitcher.tsx  EnvironmentsPanel.tsx
src/components/history/: HistorySidebar.tsx
src/components/import/: ImportDialog.tsx
src/components/layout/: AppShell.tsx  MainSidebar.tsx  MiniSidebar.tsx  RequestTabs.tsx  Sidebar.tsx  Titlebar.tsx
src/components/request/: UrlBar.tsx  (+5 more)
src/hooks/: useAutoSave.ts  useKeyboard.ts  usePlatform.ts
src/lib/: export-utils.ts  request-utils.ts  supabase.ts  sync-utils.ts  tree-utils.ts  variables.test.ts  variables.ts  workspace-utils.ts
src/stores/: authStore.ts  collectionStore.ts  environmentStore.ts  historyStore.ts  requestStore.ts  settingsStore.ts  sidebarStore.ts  syncStore.ts  tabStore.ts  teamStore.ts  undoStore.ts
src/test/: setup.ts  smoke.test.tsx
src/types/: collection.ts  environment.ts  history.ts  request.ts  team.ts
(+20 files in other folders)
